updating the text in each section to company related text

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <div class="container">
           <a href="index.html"
             ><img
-              src="images/brand-logop.png"
+              src="images/brand-logo.svg"
               alt="Mithali college"
               class="brand"
           /></a>
@@ -65,8 +65,15 @@
             </ul>
 
             <div>
-              <a href="#" class="btn btn-secondary">Download Form</a>
-              <a href="" class="btn btn-primary">Apply Now</a>
+              <a
+                href="./images/admission-form.pdf"
+                class="btn btn-secondary"
+                download="admission form"
+                >Download Form</a
+              >
+              <a href="admission-form.html" class="btn btn-primary"
+                >Apply Now</a
+              >
             </div>
           </div>
 
@@ -79,138 +86,143 @@
       </nav>
     </header>
 
-      <section id="about">
-        <div class="container">
-          <div class="about-left">
-            <h1 class="l-heading">
-              About Us
-            </h1>
-            <p>Mithali College is a co-educational Islamic oriented institution, founded to give balanced, broad and functional education in western and Islamic Education. In addition to sound academics, the aim is to produce a generation of people who are spiritually and morally sound, who can think for themselves, respect the views and feelings of others and those that will come out as frontline leaders of tomorrow in different areas of calling</p>
-          </div>
-          <div class="about-right">
-            <div class="img-bg"></div>
-            <img src="./images/about-img.png" alt="a girl image">
-          </div>
+    <section id="about">
+      <div class="container">
+        <div class="about-left">
+          <h1 class="l-heading">About Us</h1>
+          <p>
+            Mithali College is a co-educational Islamic oriented institution,
+            founded to give balanced, broad and functional education in western
+            and Islamic Education. In addition to sound academics, the aim is to
+            produce a generation of people who are spiritually and morally
+            sound, who can think for themselves, respect the views and feelings
+            of others and those that will come out as frontline leaders of
+            tomorrow in different areas of calling
+          </p>
         </div>
-      </section>
+        <div class="about-right">
+          <div class="img-bg"></div>
+          <img src="./images/about-img.png" alt="a girl image" />
+        </div>
+      </div>
+    </section>
 
-      <section class="miss-viz">
-        <div class="container">
-          <div class="vision">
-            <h1 class="l-heading">
-              Vision
-            </h1>
+    <section class="miss-viz">
+      <div class="container">
+        <div class="vision">
+          <h1 class="l-heading">Vision</h1>
+          <p>
+            <span class="brand-secondary">MITHALI</span>
+            <span class="brand-primary">COLLEGE</span> is an international
+            secondary school with the vision to make the college second to none
+            in the area of teaching, learning and functional Education.
+          </p>
+        </div>
+        <div class="mission">
+          <h1 class="l-heading">Mission</h1>
+          <p>
+            <span class="brand-secondary">At MITHALI</span>
+            <span class="brand-primary">COLLEGE</span> our mission is to produce
+            morally balanced students who will be preferred candidates for
+            higher institutions and employment in Nigeria and abroad.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="value">
+      <div class="container">
+        <h1 class="l-heading">The Values</h1>
+        <p>
+          Saving time sourcing for tutors, and thereby allowing careers deliver
+          results thats dries sucess and as well put money in their pockets.
+        </p>
+
+        <div class="card">
+          <div class="box">
+            <div class="img">
+              <img
+                src="./images/googleclassroom.png"
+                alt="Google classroom icon"
+              />
+            </div>
+            <h4 class="subheading">DELIVERY</h4>
+            <p>We provide efficient learning solution</p>
+          </div>
+
+          <div class="box">
+            <div class="img">
+              <img src="./images/Team.png" alt="Google classroom icon" />
+            </div>
+            <h4 class="subheading">TEAM</h4>
             <p>
-              <span class="brand-secondary">MITHALI</span>
-              <span class="brand-primary">COLLEGE</span> is an international secondary school with the vision to  make the college second to none in the area of teaching, learning and functional Education.
+              Dedicated and passionate Innovators fostering transparency and
+              excellent tutorship.
             </p>
           </div>
-          <div class="mission">
-            <h1 class="l-heading">
-              Mission
-            </h1>
+
+          <div class="box">
+            <div class="img">
+              <img src="./images/Trust.png" alt="Google classroom icon" />
+            </div>
+            <h4 class="subheading">PASSION</h4>
             <p>
-              <span class="brand-secondary">At MITHALI</span>
-              <span class="brand-primary">COLLEGE</span> our mission is to produce morally balanced students who will be preferred candidates for higher institutions and employment in Nigeria and abroad.
+              We have a passionate tutors who are keen to imapcting your wards
             </p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
+    <section id="team">
+      <div class="container">
+        <h1 class="l-heading">The Team</h1>
+        <p>Meet the brains Behind MITHALI COLLEGE</p>
 
-      <section id="value">
-        <div class="container">
-          <h1 class="l-heading">The Values</h1>
-          <p>Saving time sourcing for tutors, and thereby allowing careers deliver results thats dries sucess and as well put money in their pockets.</p>
-
-          <div class="card">
-            <div class="box">
-              <div class="img">
-                <img src="./images/googleclassroom.png" alt="Google classroom icon">
-              </div>
-              <h4 class="subheading">DELIVERY</h4>
-              <p>We provide efficient learning solution</p>
+        <div class="team-container">
+          <div class="profile">
+            <div class="img">
+              <img src="./images/adaeze.png" alt="Project Manager" />
             </div>
-
-            <div class="box">
-              <div class="img">
-                <img src="./images/Team.png" alt="Google classroom icon">
-              </div>
-              <h4 class="subheading">TEAM</h4>
-              <p>Dedicated and passionate Innovators  fostering transparency and excellent tutorship.</p>
+            <h3 class="name">Dr.Mukaila Alani Olalekan Sotayo</h3>
+            <p>Proprietor/Director 1</p>
+          </div>
+          <div class="profile">
+            <div class="img">
+              <img src="./images/oluwatobi.png" alt="Project Manager" />
             </div>
-            
-            <div class="box">
-              <div class="img">
-                <img src="./images/Trust.png" alt="Google classroom icon">
-              </div>
-              <h4 class="subheading">PASSION</h4>
-              <p> We have a passionate tutors who are keen to imapcting your wards</p>
+            <h3 class="name">Alhaja Aishat O.T Sotayo</h3>
+            <p>Director 2</p>
+          </div>
+          <div class="profile">
+            <div class="img">
+              <img src="./images/mark.png" alt="Project Manager" />
             </div>
+            <h3 class="name">Mr. Akeem Bisiriyu</h3>
+            <p>Secretary</p>
+          </div>
+          <div class="profile">
+            <div class="img">
+              <img src="./images/adaeze.png" alt="Project Manager" />
+            </div>
+            <h3 class="name">Alhaji Muhammed Olagesin</h3>
+            <p>Member</p>
+          </div>
+          <div class="profile">
+            <div class="img">
+              <img src="./images/oluwatobi.png" alt="Project Manager" />
+            </div>
+            <h3 class="name">Maryam Omotayo Sotayo</h3>
+            <p>Member</p>
           </div>
         </div>
-      </section>
-      <section id="team">
-        <div class="container">
-          <h1 class="l-heading">
-            The Team
-          </h1>
-          <p>Meet the brains Behind MITHALI COLLEGE</p>
-
-          <div class="team-container">
-            <div class="profile">
-              <div class="img"><img src="./images/adaeze.png" alt="Project Manager"></div>
-              <h3 class="name">Adaeze</h3>
-              <p>Project Manager</p>
-            </div>
-            <div class="profile">
-              <div class="img"><img src="./images/oluwatobi.png" alt="Project Manager"></div>
-              <h3 class="name">Tobiloba</h3>
-              <p>Project Manager</p>
-            </div>
-            <div class="profile">
-              <div class="img"><img src="./images/mark.png" alt="Project Manager"></div>
-              <h3 class="name">Mark</h3>
-              <p>Project Manager</p>
-            </div>
-            <div class="profile">
-              <div class="img"><img src="./images/adaeze.png" alt="Project Manager"></div>
-              <h3 class="name">Adaeze</h3>
-              <p>Project Manager</p>
-            </div>
-            <div class="profile">
-              <div class="img"><img src="./images/oluwatobi.png" alt="Project Manager"></div>
-              <h3 class="name">Tobiloba</h3>
-              <p>Project Manager</p>
-            </div>
-            <div class="profile">
-              <div class="img"><img src="./images/mark.png" alt="Project Manager"></div>
-              <h3 class="name">Mark</h3>
-              <p>Project Manager</p>
-            </div>
-            <div class="profile">
-              <div class="img"><img src="./images/adaeze.png" alt="Project Manager"></div>
-              <h3 class="name">Adaeze</h3>
-              <p>Project Manager</p>
-            </div>
-            <div class="profile">
-              <div class="img"><img src="./images/oluwatobi.png" alt="Project Manager"></div>
-              <h3 class="name">Tobiloba</h3>
-              <p>Project Manager</p>
-            </div>
-            <div class="profile">
-              <div class="img"><img src="./images/mark.png" alt="Project Manager"></div>
-              <h3 class="name">Mark</h3>
-              <p>Project Manager</p>
-            </div>
-          </div>
-        </div>
-      </section>
+      </div>
+    </section>
     <!-- SECTION: footer -->
     <footer>
       <div class="container">
         <div class="footer-content">
           <div class="brand-copyright">
-            <img src="./images/brand-logop.png" class="brand" alt="logo" />
+            <img src="./images/brand-logo.svg" class="brand" alt="logo" />
             <p>Copyright 2022 MITHALI COLLEGE</p>
 
             <div class="social-links">
@@ -245,7 +257,7 @@
           </div>
         </div>
         <div class="move-right">
-          <img src="./images/brand-logop.png" class="brand" alt="logo" />
+          <img src="./images/brand-logo.svg" class="brand" alt="logo" />
         </div>
       </div>
     </footer>
