updating the text to company related text

--- a/admission.html
+++ b/admission.html
@@ -26,23 +26,22 @@
       href="css/widescreen.css"
     />
     <link
-			rel="stylesheet"
-			media="screen and (max-width: 1024px)"
-			href="css/widescreen.css"
-		/>
+      rel="stylesheet"
+      media="screen and (max-width: 1024px)"
+      href="css/widescreen.css"
+    />
     <link
-			rel="stylesheet"
-			media="screen and (max-width: 768px)"
-			href="css/tablet.css"
-		/>
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/tablet.css"
+    />
     <link
-			rel="stylesheet"
-			media="screen and (max-width: 500px)"
-			href="css/mobile.css"
-		/>
+      rel="stylesheet"
+      media="screen and (max-width: 500px)"
+      href="css/mobile.css"
+    />
 
     <title>Mithali college</title>
-
   </head>
   <body>
     <header>
@@ -50,7 +49,7 @@
         <div class="container">
           <a href="index.html"
             ><img
-              src="images/brand-logop.png"
+              src="images/brand-logo.svg"
               alt="Mithali college"
               class="brand"
           /></a>
@@ -71,8 +70,15 @@
             </ul>
 
             <div>
-              <a href="#" class="btn btn-secondary">Download Form</a>
-              <a href="" class="btn btn-primary">Apply Now</a>
+              <a
+                href="./images/admission-form.pdf"
+                class="btn btn-secondary"
+                download="admission form"
+                >Download Form</a
+              >
+              <a href="admission-form.html" class="btn btn-primary"
+                >Apply Now</a
+              >
             </div>
           </div>
 
@@ -91,27 +97,48 @@
             <h3 class="sub-heading">ADMISSION PROCESS</h3>
             <p class="content">
               Applications are invited from suitably qualified candidates for
-              admission into 2020/2021 academic session application on forms are
-              obtainable online. The admission form is five thousand naira
-              (#5000) only. This amount also includes the cost of downloading
-              past question from the website.
+              admission into 2022/2023 academic session application forms are
+              available online and offline. The application form cost five
+              thousand naira (#5000) only. This amount also includes the cost of
+              downloading past question from the website.
             </p>
 
-            <h3 class="sub-heading">REQUIREMENTS FOR THE CANDIDATES</h3>
+            <h3 class="sub-heading">
+              ADMISSION REQUIREMENTS FOR THE CANDIDATES
+            </h3>
             <p class="content">
-              Those who will be eligible for admission into jss1 for 2020/2021
-              academic session must be Ten (10) years old by September, 2020
-              candidates will be required to present originals and photocopies
-              of their birth certificate during interview.
+              Prospective students for admission into JSS1 for 2022/2023
+              academic session must be Ten (10) years old by September, 2022.
+              Candidates will be required to present originals and photocopies
+              of their birth certificate during the interview.
             </p>
 
-            <h3 class="sub-heading">HOW TO APPLY FOR MITHALI COLLEGE FROM</h3>
+            <h3 class="sub-heading">HOW TO APPLY FOR MITHALI COLLEGE FORM</h3>
             <div>
-              <p>1. Fill the admission payment form and click on “Submit”</p>
-              <p>2. After submitting the payment form you will be presented with the payment option available the first is the online payment option, pay with your naira master card, verse card or GT payment the second is payment at any GT bank branch in Nigeria print the payment slip and pay at any GT bank</p>
-              <p>3. After payment, note down your PINCODE (without the PINCODE you will not be able to fill the admission form)</p>
-             <p>4. Visit this website to fill the admission forms</p>
-             <p>5. Go to admission menu and click on application form and verify your PIN</p>
+              <p>
+                Our aim is to produce the best, this means that the admission
+                policy has been carefully designed to lay the foundation for
+                excellence. All prospective students will write an entrance
+                examination, they will also be required to attend an interview,
+                to ensure the best is given a chance. A cut off mark of 50 out
+                of 100 will be the pass mark.
+              </p>
+              <br />
+              <p>
+                Admission forms can be completed and submitted online. Please
+                ensure a digital passport sized photograph is available for
+                upload. Original and photocopies of all documents are to be
+                brought to the examination venue for viewing and submission.
+              </p>
+              <br />
+              <p>
+                Admission form fee of #5000 is to be deposited into the school's
+                account and details of payment provided on the application form.
+              </p>
+              <h3 class="sub-heading">Account details are as follows:</h3>
+              <p>Ac name: Mithali College</p>
+              <p>Ac no: 1025272713</p>
+              <p>Bank: UBA plc</p>
             </div>
 
             <div class="cta">
@@ -128,7 +155,7 @@
       <div class="container">
         <div class="footer-content">
           <div class="brand-copyright">
-            <img src="./images/brand-logop.png" class="brand" alt="logo" />
+            <img src="./images/brand-logo.svg" class="brand" alt="logo" />
             <p>Copyright 2022 MITHALI COLLEGE</p>
 
             <div class="social-links">
@@ -142,7 +169,7 @@
             <ul>
               <li>Explore</li>
               <li><a href="/">Admission</a></li>
-              <li><a href="about.html">Article</a></li>
+              <li><a href="#">Article</a></li>
               <li><a href="#">Blogs</a></li>
             </ul>
 
@@ -163,7 +190,7 @@
           </div>
         </div>
         <div class="move-right">
-          <img src="./images/brand-logop.png" class="brand" alt="logo" />
+          <img src="./images/brand-logo.svg" class="brand" alt="logo" />
         </div>
       </div>
     </footer>
