--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
           <a href="index.html"
             ><img
-              src="images/brand-logop.png"
+              src="images/brand-logo.svg"
               alt="Mithali college"
               class="brand"
           /></a>
@@ -59,7 +59,7 @@
             </ul>
 
             <div>
-              <a href="#" class="btn btn-secondary">Download Form</a>
+              <a href="./images/admission-form.pdf" class="btn btn-secondary" download="admission form">Download Form</a>
               <a href="" class="btn btn-primary">Apply Now</a>
             </div>
           </div>
@@ -77,7 +77,7 @@
             <h1 class="l-heading">
               Second to None
               <span class="brand-secondary">Teaching, Learning</span> and
-              <span class="brand-primary">Functional Education</span>
+              <span class="brand-primary"><span class="underline"> Functional <img src="./images/underline.svg"> </span>Education</span>
             </h1>
             <p>
               Welcome to <span class="brand-secondary">MITHALI</span>
@@ -86,8 +86,8 @@
             </p>
 
             <div class="cta">
-              <a href="#" class="btn btn-secondary">Download Form</a>
-              <a href="" class="btn btn-primary">Apply Now</a>
+             <a href="./images/admission-form.pdf" class="btn btn-secondary" download="admission form">Download Form</a>
+              <a href="admission-form.html" class="btn btn-primary">Apply Now</a>
             </div>
           </div>
 
@@ -117,10 +117,8 @@
         <h1 class="l-heading">Why Us</h1>
         <p>
           <span class="brand-secondary">MITHALI</span>
-          <span class="brand-primary">COLLEGE</span> is an international
-          secondary school established to provide excellent academic and
-          leadership training for young minds. The institution is an outsanding
-          addition to the nations quest for academic excellence, providing
+          <span class="brand-primary">COLLEGE</span> is a co-educational Islamic oriented institution, founded to give balanced, broad and functional education in western and Islamic Education. The institution is an outstanding
+          addition to the nation's quest for academic excellence, providing
           invaluable opportunities in a safe and secure environment for the
           holistic development of the child.
         </p>
@@ -131,15 +129,15 @@
     <section id="count">
       <div class="container">
         <div class="card">
-          <div class="num">300+</div>
+          <div class="num">10+</div>
           <div class="detail">Total Reg Tutors</div>
         </div>
         <div class="card">
-          <div class="num">800+</div>
+          <div class="num">20+</div>
           <div class="detail">Total Reg Students</div>
         </div>
         <div class="card">
-          <div class="num">800+</div>
+          <div class="num">20+</div>
           <div class="detail">Total Reg Students</div>
         </div>
       </div>
@@ -148,7 +146,7 @@
     <section id="what">
       <div class="container">
         <h1 class="l-heading">
-          <span class="brand-secondary">At MITHALI</span>
+          <span class="brand-secondary"><span class="underline"> At MITHALI <img src="./images/underline.svg"></span>
           <span class="brand-primary">COLLEGE</span> we Build
         </h1>
 
@@ -157,9 +155,9 @@
             <div class="icon">
               <img src="./images/Group.svg" class="group" alt="group" />
             </div>
-            <h4>CONFIDENCE</h4>
+            <h4>Confidence</h4>
             <p>
-              We have a Passionate tutors who are keen to Impacting in your
+              We have Passionate tutors who are keen to impacting in your
               wards confidence.
             </p>
           </div>
@@ -167,9 +165,9 @@
             <div class="icon">
               <img src="./images/Vector.svg" class="group" alt="group" />
             </div>
-            <h4>Believe</h4>
+            <h4>Belief</h4>
             <p>
-              We have a Passionate tutors who are keen to Impacting in your
+              We have Passionate tutors who are keen to impacting in your
               wards confidence.
             </p>
           </div>
@@ -179,7 +177,7 @@
             </div>
             <h4>Culture</h4>
             <p>
-              We have a Passionate tutors who are keen to Impacting in your
+              We have Passionate tutors who are keen to impacting in your
               wards confidence.
             </p>
           </div>
@@ -201,18 +199,14 @@
         <div class="testimonials">
           <div class="card">
             <p class="content">
-              I always thank Google and don jazzy for the opportunities they
-              gave me to be on the life changing training, It has been a great
-              ride for me, all thanks to all amazing tutors.
+              MITHALI COLLEGE is an educative school that is not pricey. I highly recommend this school as they give the best to your child.
             </p>
             <p class="brand-secondary">Mark Emmylyrics</p>
             <p class="brand-primary">Parent</p>
           </div>
           <div class="card">
             <p class="content">
-              I always thank Google and don jazzy for the opportunities they
-              gave me to be on the life changing training, It has been a great
-              ride for me, all thanks to all amazing tutors.
+                 I love MITHALI COLLEGE  because it provides extensive classes and teaches well.
             </p>
             <p class="brand-secondary">Mark Emmylyrics</p>
             <p class="brand-primary">Parent</p>
@@ -227,7 +221,7 @@
         <div class="footer-content">
 
           <div class="brand-copyright">
-            <img src="./images/brand-logop.png" class="brand" alt="logo" />
+            <img src="./images/brand-logo.svg" class="brand" alt="logo" />
             <p>Copyright 2022 MITHALI COLLEGE</p>
   
             <div class="social-links">
@@ -240,8 +234,8 @@
           <div class="footer-nav">
             <ul>
               <li>Explore</li>
-              <li><a href="/">Admission</a></li>
-              <li><a href="about.html">Article</a></li>
+              <li><a href="#">Admission</a></li>
+              <li><a href="#">Article</a></li>
               <li><a href="#">Blogs</a></li>
             </ul>
   
@@ -262,7 +256,7 @@
           </div>
         </div>
         <div class="move-right">
-          <img src="./images/brand-logop.png" class="brand" alt="logo" />
+          <img src="./images/brand-logo.svg" class="brand" alt="logo" />
         </div>
       </div>
     </footer>
