--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,21 @@
     <!-- link for css -->
     <link rel="stylesheet" href="css/style.css" />
     <link
-			rel="stylesheet"
-			media="screen and (max-width: 1024px)"
-			href="css/widescreen.css"
-		/>
+      rel="stylesheet"
+      media="screen and (max-width: 1024px)"
+      href="css/widescreen.css"
+    />
 
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/tablet.css" />
-    <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/tablet.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 500px)"
+      href="css/mobile.css"
+    />
 
     <title>Mithali college</title>
   </head>
@@ -37,130 +45,143 @@
         <div class="container">
           <a href="index.html"
             ><img
-              src="images/brand-logop.png"
+              src="images/brand-logo.svg"
               alt="Mithali college"
               class="brand"
           /></a>
           <div class="nav-menu">
             <ul>
               <li class="nav-item">
-                <a href="index.html" class="nav-link active">Home</a>
+                <a href="index.html" class="nav-link">Home</a>
               </li>
-              <li class="nav-item"><a href="admission.html" class="nav-link">Admission</a></li>
-              <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
-              <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
+              <li class="nav-item">
+                <a href="admission.html" class="nav-link">Admission</a>
+              </li>
+              <li class="nav-item">
+                <a href="contact.html" class="nav-link active">Contact Us</a>
+              </li>
+              <li class="nav-item">
+                <a href="about.html" class="nav-link">About Us</a>
+              </li>
             </ul>
 
             <div>
-              <a href="#" class="btn btn-secondary">Download Form</a>
-              <a href="" class="btn btn-primary">Apply Now</a>
+              <a
+                href="./images/admission-form.pdf"
+                class="btn btn-secondary"
+                download="admission form"
+                >Download Form</a
+              >
+              <a href="admission-form.html" class="btn btn-primary"
+                >Apply Now</a
+              >
             </div>
           </div>
-         
-        <div class="hamburger">
+
+          <div class="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
-        </div>
+          </div>
         </div>
       </nav>
-    
     </header>
 
     <section id="contact">
-        <div class="container">
-            <h1 class="l-heading">Contact Us</h1>
-            <p>Questions, issues, or just want to say hello? Contact us and we will get back to you as soon as we can</p>
-            <div class="contact">
-                <form action="#">
-                    <h3>Leave us a message</h3>
-                    <div>
-                        <input
-                            type="text"
-                            name="full name"
-                            id="name"
-                            placeholder="Full Name"
-                        />
-                    </div>
-                    <div class="email">
-                        <input
-                            type="text"
-                            name="email"
-                            id="email"
-                            placeholder="Enter Email"
-                        />
-                    </div>
-                    <div class="phone">
-                        <input
-                            type="text"
-                            name="phone"
-                            id="phone"
-                            placeholder="Enter Phone Number"
-                        />
-                    </div>
-                    <div class="message">
-                        <textarea name="message" placeholder="Your Message"></textarea>
-                    </div>
-                    <div class="submit">
-                        <input type="submit" value="Send Message" />
-                    </div>
-                </form>
-                <!-- details -->
-                <div class="detail">
-                    <div class="mail">
-                        <h3 class="sub-heading">Send Us a Mail</h3>
-
-                        <ul>
-                            <li>GENERAL ENQUIRY</li>
-                            <li>support@Instaskool</li>
-                            <li>Business</li>
-                            <li>support@Instaskool</li>
-                        </ul>
-                    </div>
-                    <div class="phone">
-                        <h3 class="sub-heading">
-                            Call Us
-                        </h3>
-                        <ul>
-                            <li>(+234) 706 529 2789</li>
-                            <li>(+234) 706 529 2789</li>
-                        </ul>
-                    </div>
-                    <div class="address">
-                        <h3 class="sub-heading">Address</h3>
-                        <p>Lekki Phase 1, Lagos Nigeria</p>
-                    </div>
-                </div>
+      <div class="container">
+        <h1 class="l-heading">Contact Us</h1>
+        <p>
+          Questions, issues, or just want to say hello? Contact us and we will
+          get back to you as soon as we can
+        </p>
+        <div class="contact">
+          <form action="#">
+            <h3>Leave us a message</h3>
+            <div>
+              <input
+                type="text"
+                name="full name"
+                id="name"
+                placeholder="Full Name"
+              />
             </div>
+            <div class="email">
+              <input
+                type="text"
+                name="email"
+                id="email"
+                placeholder="Enter Email"
+              />
+            </div>
+            <div class="phone">
+              <input
+                type="text"
+                name="phone"
+                id="phone"
+                placeholder="Enter Phone Number"
+              />
+            </div>
+            <div class="message">
+              <textarea name="message" placeholder="Your Message"></textarea>
+            </div>
+            <div class="submit">
+              <input type="submit" value="Send Message" />
+            </div>
+          </form>
+          <!-- details -->
+          <div class="detail">
+            <div class="mail">
+              <h3 class="sub-heading">Send Us a Mail</h3>
 
+              <ul>
+                <li>GENERAL ENQUIRY</li>
+                <li>info@mithalicollege.com</li>
+                <li>Business</li>
+                <li>info@mithalicollege.com</li>
+              </ul>
+            </div>
+            <div class="phone">
+              <h3 class="sub-heading">Call Us</h3>
+              <ul>
+                <li>(+234) 803 328 5923</li>
+                <!-- <li>(+234) 706 529 2789</li> -->
+              </ul>
+            </div>
+            <div class="address">
+              <h3 class="sub-heading">Address</h3>
+              <p>
+                Zone 4, Wonderland Estate, Leso, Via Camp, Abeokuta, Ogun State,
+                Nigeria.
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
-
 
     <!-- SECTION: footer -->
     <footer>
       <div class="container">
         <div class="footer-content">
-
           <div class="brand-copyright">
-            <img src="./images/brand-logop.png" class="brand" alt="logo" />
+            <img src="./images/brand-logo.svg" class="brand" alt="logo" />
             <p>Copyright 2022 MITHALI COLLEGE</p>
-  
+
             <div class="social-links">
               <a href="#"><i class="bx bxl-facebook"></i> </a>
               <a href="#"><i class="bx bxl-instagram"></i> </a>
               <a href="#"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
-  
+
           <div class="footer-nav">
             <ul>
               <li>Explore</li>
-              <li><a href="/">Admission</a></li>
-              <li><a href="about.html">Article</a></li>
+              <li><a href="#">Admission</a></li>
+              <li><a href="#">Article</a></li>
               <li><a href="#">Blogs</a></li>
             </ul>
-  
+
             <ul>
               <li>About</li>
               <li><a href="#">Privacy</a></li>
@@ -178,7 +199,7 @@
           </div>
         </div>
         <div class="move-right">
-          <img src="./images/brand-logop.png" class="brand" alt="logo" />
+          <img src="./images/brand-logo.svg" class="brand" alt="logo" />
         </div>
       </div>
     </footer>
