Update the image of the team member

--- a/about.html
+++ b/about.html
@@ -181,35 +181,35 @@
         <div class="team-container">
           <div class="profile">
             <div class="img">
-              <img src="./images/adaeze.png" alt="Project Manager" />
+              <img src="./images/dr-mukaila.jpeg" alt="Project Manager" />
             </div>
             <h3 class="name">Dr.Mukaila Alani Olalekan Sotayo</h3>
             <p>Proprietor/Director 1</p>
           </div>
           <div class="profile">
             <div class="img">
-              <img src="./images/oluwatobi.png" alt="Project Manager" />
+              <img src="./images/alhaja-aisha.jpeg" alt="Project Manager" />
             </div>
             <h3 class="name">Alhaja Aishat O.T Sotayo</h3>
             <p>Director 2</p>
           </div>
           <div class="profile">
             <div class="img">
-              <img src="./images/mark.png" alt="Project Manager" />
+              <img src="./images/mr-akeem.jpeg" alt="Project Manager" />
             </div>
             <h3 class="name">Mr. Akeem Bisiriyu</h3>
             <p>Secretary</p>
           </div>
           <div class="profile">
             <div class="img">
-              <img src="./images/adaeze.png" alt="Project Manager" />
+              <img src="./images/alhaji-muhammed.jpeg" alt="Project Manager" />
             </div>
             <h3 class="name">Alhaji Muhammed Olagesin</h3>
             <p>Member</p>
           </div>
           <div class="profile">
             <div class="img">
-              <img src="./images/oluwatobi.png" alt="Project Manager" />
+              <img src="./images/maryam.jpeg" alt="Project Manager" />
             </div>
             <h3 class="name">Maryam Omotayo Sotayo</h3>
             <p>Member</p>
