#full project update

--- a/admission-form.html
+++ b/admission-form.html
@@ -86,11 +86,21 @@
           <span class="brand-secondary">MITHALI COLLEGE</span>
         </p>
 
-        <img
-          src="/images/admission photo.svg"
-          alt="image upload avatar "
-          class="avatar"
-        />
+        <div class="imageUpload">
+          <input
+            type="file"
+            name="image"
+            id="file"
+            style="height: 100%; opacity: 0; cursor: pointer"
+          />
+          <label for="file" class="upload-btn"
+            ><img
+              src="images/camera.svg"
+              alt="icon for camera"
+              class="upload-icon"
+              title="upload a passport"
+          /></label>
+        </div>
       </section>
 
       <fieldset>
